--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
             .wrapper
                 .topmenu 
                     .logo
-                        img(src="../img/logo.png", alt="logo")
+                        img(src="img/logo.png", alt="logo")
                     .menu 
                         +menu(topmenu)
                     .burMenu
@@ -25,7 +25,7 @@ html(lang="en")
                 .buttop
                     h2 обери свій план подорожі
                     p Наша фірма - лідер на ринку у своїй сфері
-                    img(alt="angle", src="../img/angle.png")     
+                    img(alt="angle", src="img/angle.png")     
         main.middle
             .wrapper 
                 .cards 
@@ -39,7 +39,7 @@ html(lang="en")
                 hr
                 .tai 
                     .taiimg
-                        img(alt="острів", src="../img/tai.png")
+                        img(alt="острів", src="img/tai.png")
                     .taicontent 
                         h4 Дивовижний безлюдний острів, який зводить людей з розуму
                         .taicontainer
@@ -61,7 +61,7 @@ html(lang="en")
                             p Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
                             p Олег Набережний
                             p.small клієнт
-                            img(alt="фото", src="../img/photo.png")
+                            img(alt="фото", src="img/photo.png")
 
         footer 
             p &copy; 2016 Cars.com All rights reserved.
