--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,7 @@ html(lang="en")
             .wrapper
                 .topmenu 
                     .logo
-                        img(src="img/logo.png", alt="logo")
+                        img(src="img/icons/logo.png", alt="logo")
                     .menu 
                         +menu(topmenu)
                     .burMenu
@@ -58,10 +58,48 @@ html(lang="en")
                             p Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
                             a(href="#").butt детальніше
                         .wavefeed  
-                            p Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
-                            p Олег Набережний
-                            p.small клієнт
-                            img(alt="фото", src="img/photo.png")
+                            .transpe
+                            p.p ❞
+                            .tx
+                                p.all Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
+                                p.ol Олег Набережний
+                                p.small клієнт
+                                img(alt="фото", src="img/icons/photo.png")
+            .wrapper 
+                .price 
+                    h4.h4 Спеціальні пропозиції тижня
+                    p.prise Гарячі праозиції, по-швидше обирай і поїхали!
+                    +pricelist(price)
+                hr
+                
+            .add 
+                .wrapper 
+                    .inform 
+                        h4 додаткова інформація
+                        .informcard
+                            .graf 
+                                img(alt="файл", src="img/icons/file.png")
+                                a Графік роботи готелів.xls 
+                                    span Розмір файла: 10Mb
+                                p Розклад роботи усіх наших готелів, можете знайти за цим посиланням. Та додатково завантажити їх фото.
+                                a.download ☁ скачати 
+                            .food 
+                                img(alt="файли", src="img/icons/file.png")
+                                a Інформація про харчування.xls
+                                    span Розмір файла: 10Mb
+                                p У будь-якому нашому турі включені сніданки у вартість. Якщо ж бажаєте замовити додотково, то ознайомтесь з умовами.
+                                a.download ☁ скачати
 
-        footer 
+                        .informquestion 
+                            .border 
+                            .question 
+                                p задати питання
+                                p.small Скажіть доброго дня нашому консультанту, і ми з радістю відповімо на Ваші запитання  
+                                img(alt="телефон", src="img/icons/phone.png")
+                                a(href="tel:+380505698511") +38 (050) 56 98 511
+                                p Анна Миколаївна
+                                p.smalll консультант
+                                img.img(alt="консультант", src="img/icons/women.png")
+        footer
             p &copy; 2016 Cars.com All rights reserved.
+        script(src="js/scripts.js") 
