--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -1,16 +1,18 @@
 .tai
     display: flex
+    padding-bottom: 50px
+    padding-top: 50px
 
     &content
         display: flex
         flex-wrap: wrap
         width: 100%
-        
+
         h4
             width: 100%
 
     &container
-        width: calc( 100% - 317px)
+        width: calc(100% - 317px)
 
     &img img
         width: 370px
@@ -20,6 +22,7 @@
     background-image: url('../img/wave.png')
     background-size: cover
     background-position: center
+    padding: 100px 0
 
     &flex
         display: flex
@@ -40,8 +43,200 @@
             text-transform: uppercase
 
     &feed
+        position: relative
         width: 100%
+        margin: 113px 80px
         color: #fff
 
         +media(728)
             width: 50%
+
+        img
+            position: absolute
+            left: 222px
+
+.preloader
+    width: 100%
+    height: 100vh
+    top: 0
+    left: 0
+    position: fixed
+    background-color: #0099ffc5
+    display: flex
+    justify-content: center
+    align-items: center
+
+.all
+    color: white
+    font-size: 16px
+    margin: 0
+    padding-bottom: 15px
+    font-style: italic
+
+.transpe
+    position: absolute
+    opacity: 0.102
+    width: 570px
+    height: 236px
+    border: 4px solid #fff
+
+.p
+    text-align: center
+    margin-left: 60px
+    color: #ffb700
+    position: absolute
+    font-size: 78px
+    margin: 0
+    top: -20%
+    left: 53%
+
+.ol
+    font-size: 18px
+    margin: 0
+    color: #ffffff
+    text-align: center
+
+.tx
+    margin-left: 60px
+    margin-top: 68px
+
+.prise
+    font-size: 16px
+    margin-bottom: 50px
+    color: #333
+    font-style: italic
+    text-align: center
+
+.price
+    margin-top: 50px
+    margin-bottom: 50px
+
+.pricecards
+    display: flex
+
+.priceitem
+    margin-right: 35px
+    padding: 15px
+    width: 270px
+    height: 332px
+    transition: all 1s ease
+
+    p
+        font-size: 13px
+        color: #999999
+
+    h5
+        font-size: 24px
+        margin: 0
+        color: #0099ff
+
+    a
+        font-size: 13px
+        text-transform: uppercase
+        color: #ffb700
+        text-align: center
+
+    &:hover
+        background-color: #fff
+        filter: drop-shadow(0 4px 10.5px rgba(3, 20, 31, .05))
+
+.test
+    display: flex
+    justify-content: space-between
+
+.h4
+    font-size: 36px
+    text-transform: uppercase
+    margin: 0
+    color: #333333
+    text-align: center
+
+.inform
+    display: flex
+    margin-top: 50px
+
+    h4
+        font-size: 36px
+        text-transform: uppercase
+        margin-right: 50px
+        color: #333333
+
+    &card
+        display: flex
+
+        p
+            font-size: 13px
+            color: #ffffff
+
+        a
+            font-size: 18px
+            line-height: 24px
+            color: #ffffff
+            font-weight: 400
+            font-family: "Rubik"
+            span
+                font-size: 13px
+                color: #bbbbbb
+
+        .download
+            font-size: 12px
+            text-transform: uppercase
+            color: #ffb700
+            text-align: center
+            border: 1px solid #ffb700
+            border-radius: 15px
+            padding: 5px
+
+.graf
+    width: 238px
+    height: 238px
+    padding: 15px
+    margin-right: 50px
+    background-image: url('../img/house.png')
+    background-size: cover
+    background-position: center
+
+.food
+    width: 238px
+    height: 238px
+    padding: 15px
+    margin-right: 50px
+    background-image: url('../img/height.png')
+    background-size: cover
+    background-position: center
+
+.border
+    position: absolute
+    width: 270px
+    height: 269px
+    border: 4px solid #ffb700
+
+.question
+    position: relative
+    text-align: center
+    padding-left: 15px
+
+    p
+        margin: 0
+        padding: 10px
+
+    a
+        font-size: 18px
+        color: #0099ff
+        margin-top: 5px
+        text-align: center
+        margin-left: 5px
+
+    .img
+        position: absolute
+        top: 110%
+        left: 30%
+
+    .small
+        padding-bottom: 20px
+
+    .smalll
+        font-size: 13px
+        padding: 0
+        color: #999999
+        text-align: center
