--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -98,8 +98,7 @@ h1
     text-transform: uppercase
 
 .midtop p,
-.buttop p,
-.wavefeed p
+.buttop p
     color: white
     font-size: 16px
     font-style: italic
@@ -111,8 +110,9 @@ h1
     text-decoration: none
     text-align: center
     color: #fdfcfb
+    margin-right: 15px
     padding: 20px 30px
-    margin: auto
+    margin-bottom: 15px
     border-radius: 30px
     filter: drop-shadow(0px 4px 10.5px rgba(193, 139, 1, 0.24))
     background-color: #ffb700
@@ -185,6 +185,7 @@ h1
 .big
     color: #333
     font-size: 16px
+    margin-right: 15px
     font-style: italic
 
 .plans
@@ -208,3 +209,7 @@ h1
     &:hover
         color: #fff
         background-color: #0099ff
+
+.small
+    text-align: center
+    margin: 0
