--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -22,7 +22,7 @@ html(lang="en")
                     p Не важливо, чи Ваша мандрівка належить до елітного рівня чи до економваріанту, туроператор S trips потурбується, щоб Ви залишились задоволеними!
                     a(href="#").butt детальніше
                     .transp
-                .buttop
+                a(href="#special").buttop
                     h2 обери свій план подорожі
                     p Наша фірма - лідер на ринку у своїй сфері
                     img(alt="angle", src="img/angle.png")     
@@ -66,7 +66,7 @@ html(lang="en")
                                 p.small клієнт
                                 img(alt="фото", src="img/icons/photo.png")
             .wrapper 
-                .price 
+                .price#special
                     h4.h4 Спеціальні пропозиції тижня
                     p.prise Гарячі праозиції, по-швидше обирай і поїхали!
                     +pricelist(price)
