--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -8,11 +8,13 @@
 
 html
     font-size: 1px
+    scroll-behavior: smooth
 
 body
     margin: 0
     font-family: Rubik
     font-size: 16rem
+    scroll-behavior: smooth
     background-color: #f5f8fa
 
 hr
@@ -84,7 +86,7 @@ h1
     left: 50%
     bottom: 155px
     transform: translateX(-50%)
-    border: 4px solid #fff
+    border: 4px solid #fff    
 
 .midtop,
 .buttop
@@ -122,6 +124,9 @@ h1
         color: #ffb700
         background-color: #fff
 
+.buttop
+    display: block
+
 .buttop h2
     font-size: 36px
     text-transform: uppercase
@@ -139,7 +144,7 @@ h1
     text-align: center
     flex-wrap: wrap
 
-    +media(568)
+    +media(1024)
         flex-wrap: nowrap
 
 .card h4
@@ -161,7 +166,6 @@ h1
     text-align: center
 
 .card
-    margin: 0 30px
     width: 270px
     height: 269px
     transition: all 1s ease
