--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -1,3 +1,4 @@
+
 .tai
     display: flex
     flex-direction: column
@@ -18,12 +19,18 @@
 
         h4
             width: 100%
+            text-align: center
+
+            +media (768)
+                text-align: left
 
     &container
-        width: calc(100% - 317px)
+
+        +media (768)
+            width: calc(100% - 317px)
 
     &img img
-        width: 370px
+        width: 100%
         height: 270px
 
 .wave
@@ -53,15 +60,20 @@
             font-size: 56px
             letter-spacing: 2px
             text-transform: uppercase
+            text-align: center
+
+            +media (768)
+                text-align: left
 
     &feed
         position: relative
         width: 100%
-        margin: 113px 80px
+        margin: 113px 0
         color: #fff
 
         +media(728)
             width: 50%
+            margin: 113px 80px
 
         img
             position: absolute
@@ -185,10 +197,17 @@
     margin: 0
     color: #333333
     text-align: center
+    text-align: center
+
+    +media (768)
+        text-align: left
 
 .inform
     display: flex
     flex-direction: column
+    justify-content: center
+    align-content: center
+    flex-wrap: wrap
     //margin-top: 50px
     column-gap: 30px
     row-gap: 30px
@@ -201,6 +220,10 @@
         width: 270px
         text-transform: uppercase
         color: #333333
+        text-align: center
+
+        +media (768)
+            text-align: left
 
     &card
         position: relative
