--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -25,6 +25,8 @@ hr
 .wrapper
     margin: 0 auto
     max-width: 1171px
+    padding: 0 15px
+    box-sizing: border-box
 
 .top
     background-image: url(../img/sea.png)
@@ -86,7 +88,7 @@ h1
     left: 50%
     bottom: 155px
     transform: translateX(-50%)
-    border: 4px solid #fff    
+    border: 4px solid #fff
 
 .midtop,
 .buttop
@@ -96,7 +98,9 @@ h1
 .midtop h1
     color: white
     text-align: center
-    font-size: 72px
+    font-size: 30px
+    +media (768)
+        font-size: 71px
     text-transform: uppercase
 
 .midtop p,
@@ -150,6 +154,10 @@ h1
 .card h4
     font-size: 18px
     color: #333
+    text-align: center
+
+    +media (768)
+        text-align: left
 
 .card h5
     font-size: 24px
@@ -176,8 +184,11 @@ h1
         filter: drop-shadow(0px 4px 10.5px rgba(3,20,31,0.05))
 
 .maincard
-    text-align: left
     margin-right: 50px
+    text-align: center
+
+    +media(768)
+        text-align: left
 
 .maincard h4,
 .taicontent h4
@@ -185,6 +196,10 @@ h1
     margin: 0
     text-transform: uppercase
     color: #333
+    text-align: center
+
+    +media (768)
+        text-align: left
 
 .big
     color: #333
