--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -5,7 +5,7 @@
     padding-bottom: 50px
     padding-top: 50px
 
-    +media (1200)
+    +media (1024)
         flex-direction: row
 
     &content
@@ -14,7 +14,7 @@
         flex-direction: column
         width: 100%
 
-        +media (1200)
+        +media (768)
             flex-direction: row
 
         h4
@@ -33,6 +33,12 @@
         width: 100%
         height: 270px
 
+        +media(480)
+            width: 270px
+
+        +media(1024)
+            width: 100%
+
 .wave
     background-image: url('../img/wave.png')
     background-size: cover
@@ -43,7 +49,7 @@
         display: flex
         flex-direction: column
 
-        +media (1200)
+        +media (768)
             flex-direction: row
 
     &main
@@ -71,7 +77,7 @@
         margin: 113px 0
         color: #fff
 
-        +media(728)
+        +media(1024)
             width: 50%
             margin: 113px 80px
 
@@ -103,17 +109,29 @@
     content: ''
     position: absolute
     opacity: 0.102
-    width: 200px
+    width: 81px
     height: 236px
     border: 4px solid #fff
 
+    +media(768)
+        width: 150px
+
+    +media(1175)
+        width: 200px
+
 .transpe::before
     border-right: none
-    left: 0
+    left: 20px
+
+    +media(1024)
+        left: 0
 
 .transpe::after
     border-left: none
-    right: 0
+    right: 20px
+
+    +media(1024)
+        right: 0
 
 .p
     text-align: center
@@ -133,8 +151,12 @@
     text-align: center
 
 .tx
-    padding: 0 60px
-    margin-top: 68px
+    padding: 0 30px
+    margin-top: 30px
+
+    +media (768)
+        padding: 0 60px
+        margin-top: 68px
 
 .prise
     font-size: 16px
@@ -199,9 +221,6 @@
     text-align: center
     text-align: center
 
-    +media (768)
-        text-align: left
-
 .inform
     display: flex
     flex-direction: column
@@ -212,8 +231,9 @@
     column-gap: 30px
     row-gap: 30px
 
-    +media (1200)
+    +media (1180)
         flex-direction: row
+        flex-wrap: nowrap
 
     h4
         font-size: 36px
