--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -6,6 +6,17 @@
 @import component/main
 @import component/footer
 
+@mixin closeBtn($top:0, $angle:45deg)
+    content: ''
+    position: absolute
+    left: 0
+    top: $top
+    transform: rotate($angle)
+    width: 20rem
+    height: 1rem
+    transition: 1s all ease
+    border-top: 3px solid transparent
+
 html
     font-size: 1px
     scroll-behavior: smooth
@@ -44,13 +55,24 @@ ul, li
     list-style: none
 
 .burMenu
-    width: 25rem
-    height: 25rem
-    border: 5rem solid blue
-    display: none
+    position: relative
+    width: 15rem
+    height: 5rem
+    border: 3rem solid #fff
+    border-left: none
+    border-right: none
+    display: block
+    transition: 1s all ease
 
-    +media(568px)
-        display: block
+    +media(1024)
+        display: none
+
+    &:before
+        +closeBtn()
+
+    &:after
+        +closeBtn(0px, -45deg)
+
 h1
     color: blue
 
@@ -59,12 +81,19 @@ h1
     justify-content: space-between
     align-items: center
 
+.menu
+    display: none
+    +media(1024)
+        display: block
+
 .menu ul
     display: flex
     flex-wrap: wrap
     flex-direction: column
-    flex-direction: row
+    flex-wrap: wrap
     justify-content: flex-end
+    +media(568)
+        flex-direction: row
 
 .menu li
     display: inline-block
@@ -77,18 +106,40 @@ h1
     &:hover
         color: #ffb700
 
+.menuOpen
+    position: fixed
+    height: 100vh
+    top: 0
+    left: 0
+    padding-top: 50px
+    display: block
+    z-index: 2
+    width: 100%
+    background-color: #144dca
+
+.burOpen
+    z-index: 3
+    border-color: transparent
+
+    &:before,
+    &:after
+        border-color: #fff
+
 .midtop
     position: relative
 
 .transp
     position: absolute
     opacity: 0.200
-    width: 370px
+    width: 300px
     height: 335px
     left: 50%
     bottom: 155px
     transform: translateX(-50%)
     border: 4px solid #fff
+
+    +media (480)
+        width: 370px
 
 .midtop,
 .buttop
@@ -174,20 +225,43 @@ h1
     text-align: center
 
 .card
-    width: 270px
+    position: relative
+    width: 100%
     height: 269px
     transition: all 1s ease
     padding: 15px
+    box-sizing: border-box
 
     &:hover
         background-color: #fff
         filter: drop-shadow(0px 4px 10.5px rgba(3,20,31,0.05))
 
+    &:before
+        content: ''
+        position: absolute
+        top: 0
+        left: 0
+        width: 60px
+        height: 60px
+        background-color: #26cb15
+        //background-image: linear-gradient(green transparent)
+
+    &:after
+        content: ''
+        position: absolute
+        top: 10px
+        left: 10px
+        width: 15px
+        height: 15px
+        background-color: #fff
+        clip-path: polygon(50% 0,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)
+
 .maincard
-    margin-right: 50px
+    margin-right: 0
     text-align: center
 
     +media(768)
+        margin-right: 50px
         text-align: left
 
 .maincard h4,
