--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -46,7 +46,7 @@ html(lang="en")
                             p.big Пхукет - курортно-туристична Мекка Таїланду. Білосніжний пісок, і бірюзове море, і мальовничі скелі, а на них же, трохи вище - буйна тропічна рослинність. Все це можна побачити на власні очі.
                             a(href="#").butt замовити тур
                             a(href="#").butt.blue детальніше
-                        .card.pricard
+                        .pricard
                             h5 575 грн./день
                             p.small В дану вартість входить обслуговування персоналу, вечеря і захоплюючі історії.
             .wave
