--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -196,30 +196,33 @@ h1
 .cards
     display: flex
     flex-direction: row
+    column-gap: 30px
     text-align: center
     flex-wrap: wrap
 
     +media(1024)
         flex-wrap: nowrap
 
-.card h4
+.card h4,
+.pricard h4
     font-size: 18px
     color: #333
     text-align: center
 
-    +media (768)
-        text-align: left
-
 .card h5
     font-size: 24px
     color: #0099ff
+    margin-top: 0
+    margin-bottom: 5px
 
 .card p,
+.pricard p,
 .small
     font-size: 13px
     color: #999
 
-.card img
+.card img,
+.pricard img
     width: 55px
     height: 50px
     text-align: center
@@ -236,25 +239,24 @@ h1
         background-color: #fff
         filter: drop-shadow(0px 4px 10.5px rgba(3,20,31,0.05))
 
-    &:before
-        content: ''
-        position: absolute
-        top: 0
-        left: 0
-        width: 60px
-        height: 60px
-        background-color: #26cb15
-        //background-image: linear-gradient(green transparent)
+.star:before
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    width: 60px
+    height: 60px
+    background-image: linear-gradient(135deg, #26cb15 50%, transparent 50%)
 
-    &:after
-        content: ''
-        position: absolute
-        top: 10px
-        left: 10px
-        width: 15px
-        height: 15px
-        background-color: #fff
-        clip-path: polygon(50% 0,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)
+.star:after
+    content: ''
+    position: absolute
+    top: 10px
+    left: 10px
+    width: 15px
+    height: 15px
+    background-color: #fff
+    clip-path: polygon(50% 0,61% 35%,98% 35%,68% 57%,79% 91%,50% 70%,21% 91%,32% 57%,2% 35%,39% 35%)
 
 .maincard
     margin-right: 0
@@ -291,7 +293,12 @@ h1
     width: 287px
     height: 169px
     margin: 0
+    text-align: center
     background-color: #edf2f5
+
+.pricard h5
+    font-size: 24px
+    color: #0099ff
 
 .blue
     color: #0099ff
