--- a/src/pug/component/mixin.pug
+++ b/src/pug/component/mixin.pug
@@ -95,7 +95,7 @@ mixin pricelist (items)
             div.priceitem
                 if (item.bluelineimg)
                     .blueline
-                        img(src=item.img, alt="")
+                        img(src=item.bluelineimg, alt="")
                 .star
                 img(src=item.img, alt="")
                 h4 #{item.name}
