--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -20,8 +20,8 @@ html(lang="en")
                 .midtop 
                     h1 Морські пригоди
                     p Не важливо, чи Ваша мандрівка належить до елітного рівня чи до економваріанту, туроператор S trips потурбується, щоб Ви залишились задоволеними!
-                    a(href="#").butt детальніше
                     .transp
+                    a(href="#").butt детальніше
                 a(href="#special").buttop
                     h2 обери свій план подорожі
                     p Наша фірма - лідер на ринку у своїй сфері
@@ -57,8 +57,7 @@ html(lang="en")
                                 span ЖИВИ ЯСКРАВО!
                             p Полюбляєш екстрим та пригоди? Тоді тобі точно до нас! Мрієш стати на сапборд, але ніяк не міг наважитсь? Наші досвдчені інструктори навчать тебе вміло «піймати хвилі» та відчути себе справжнім сьорфером!
                             a(href="#").butt детальніше
-                        .wavefeed  
-                            .transpe
+                        .wavefeed.transpe
                             p.p ❞
                             .tx
                                 p.all Чудова туристична фірма, що повністю виправдала мої очікування від подорожі. Я був приємно вражений екскурсіями, що для мене підібрали, працюють спражні професіонали своєї справи. 
