--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -84,7 +84,8 @@
         img
             position: absolute
             left: 50%
-            transform: translateX(-50%)
+            bottom: 0
+            transform: translate(-50%, -50%)
 
 .preloader
     width: 100%
@@ -110,7 +111,8 @@
     position: absolute
     opacity: 0.102
     width: 81px
-    height: 236px
+    height: 100%
+    top: 0
     border: 4px solid #fff
 
     +media(768)
@@ -140,9 +142,9 @@
     position: absolute
     font-size: 78px
     margin: 0
-    top: -20%
+    top: 0
     left: 50%
-    transform: translateX(-50%)
+    transform: translate(-50%, -50%)
 
 .ol
     font-size: 18px
@@ -186,7 +188,8 @@
 .priceitem
     position: relative
     width: 270px
-    height: 332px
+    //height: 332px
+    padding-bottom: 35px
     transition: all 1s ease
 
     p
@@ -200,13 +203,18 @@
         margin: 15px 0
 
     h5
-        font-size: 24px
+        font-size: 20px
         margin: 0
+        white-space: nowrap
         color: #0099ff
+
+        +media(1440)
+            font-size: 24px
 
     a
         font-size: 13px
         text-transform: uppercase
+        white-space: nowrap
         color: #ffb700
         text-align: center
 
@@ -216,6 +224,20 @@
 
     img
         width: 100%
+        height: 185px
+
+.blueline
+    position: absolute
+    top: 0
+    left: 0
+    background-color: #0099ff
+    width: 60px
+    height: 185px
+
+    img
+        width: 40px
+        height: 35px
+        margin: 77px 10px
 
 .test
     display: flex
@@ -224,6 +246,7 @@
     width: 100%
     box-sizing: border-box
     justify-content: space-between
+    align-items: center
     padding: 0 20px
 
 .h4
@@ -297,7 +320,12 @@
             text-align: center
             border: 1px solid #ffb700
             border-radius: 15px
+            transition: all 1s ease
             padding: 0 10px
+
+            &:hover
+                background-color: #ffb700
+                color: #fff
 
     &question
         position: relative
