--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -128,18 +128,28 @@ h1
 .midtop
     position: relative
 
-.transp
+.transp::before,
+.transp::after
+    content: ''
     position: absolute
-    opacity: 0.200
-    width: 300px
-    height: 335px
+    top: 25%
     left: 50%
-    bottom: 155px
     transform: translateX(-50%)
+    opacity: 0.200
     border: 4px solid #fff
+    width: 300px
 
-    +media (480)
+    +media(420)
         width: 370px
+
+.transp::before
+    height: 40px
+    border-bottom: none
+
+.transp::after
+    height: 90px
+    top: 70%
+    border-top: none
 
 .midtop,
 .buttop
