--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -80,6 +80,7 @@ h1
     display: flex
     justify-content: space-between
     align-items: center
+    padding-top: 30px
 
 .menu
     display: none
