--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -12,6 +12,7 @@
         display: flex
         flex-wrap: wrap
         flex-direction: column
+        justify-content: space-between
         width: 100%
 
         +media (768)
@@ -30,7 +31,7 @@
             width: calc(100% - 317px)
 
 .taiimg
-    padding: 0 25px
+    padding: 0 25px 0 0
 
     img
         width: 100%
@@ -41,7 +42,7 @@
             width: 270px
 
         +media(1024)
-            width: 100%
+            width: 370px
 
 
 .wave
