--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -36,7 +36,6 @@ hr
 .wrapper
     margin: 0 auto
     max-width: 1171px
-    padding: 0 15px
     box-sizing: border-box
 
 .top
@@ -179,7 +178,7 @@ h1
     text-align: center
     color: #fdfcfb
     margin-right: 15px
-    padding: 20px 30px
+    padding: 13px 30px
     margin-bottom: 15px
     border-radius: 30px
     filter: drop-shadow(0px 4px 10.5px rgba(193, 139, 1, 0.24))
@@ -292,6 +291,8 @@ h1
     color: #333
     font-size: 16px
     margin-right: 15px
+    margin: 25px 0
+    line-height: 21.5px
     font-style: italic
 
 .plans
@@ -301,15 +302,18 @@ h1
     color: #0099ff
 
 .pricard
-    width: 287px
+    width: 285px
+    padding: 25px 50px
     height: 169px
     margin: 0
+    box-sizing: border-box
     text-align: center
     background-color: #edf2f5
 
 .pricard h5
     font-size: 24px
     color: #0099ff
+    margin: 15px 0
 
 .blue
     color: #0099ff
