--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -33,6 +33,9 @@ hr
     border: 1px solid transparent
     border-top-color: #e4e4ec
 
+h4
+    font-weight: 400
+
 .wrapper
     margin: 0 auto
     max-width: 1171px
@@ -239,8 +242,8 @@ h1
 
 .card
     position: relative
-    width: 100%
-    height: 269px
+    width: 270px
+    height: 270px
     transition: all 1s ease
     padding: 15px
     box-sizing: border-box
@@ -273,7 +276,7 @@ h1
     text-align: center
 
     +media(768)
-        margin-right: 50px
+        width: 270px
         text-align: left
 
 .maincard h4,
@@ -291,7 +294,8 @@ h1
     color: #333
     font-size: 16px
     margin-right: 15px
-    margin: 25px 0
+    margin-top: 25px
+    margin-bottom: 35px
     line-height: 21.5px
     font-style: italic
 
@@ -326,5 +330,4 @@ h1
         background-color: #0099ff
 
 .small
-    text-align: center
     margin: 0
