--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -7,6 +7,8 @@ html(lang="en")
         title S.trips
         link(rel="stylesheet", href="css/styles.css")
         link(href="https://fonts.googleapis.com/css2?family=Maven+Pro&family=Montserrat:wght@500&family=Rubik&display=swap", rel="stylesheet")
+        link(href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap", rel="stylesheet")
+
         
     body 
         header.top 
