--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -31,7 +31,7 @@
             width: calc(100% - 317px)
 
 .taiimg
-    padding: 0 25px 0 0
+    padding: 10px 25px 0 0
 
     img
         width: 100%
@@ -43,7 +43,6 @@
 
         +media(1024)
             width: 370px
-
 
 .wave
     background-image: url('../img/wave.png')
@@ -71,28 +70,39 @@
         h4
             font-size: 56px
             letter-spacing: 2px
+            margin: 0
             text-transform: uppercase
             text-align: center
 
             +media (768)
                 text-align: left
 
+        p
+            font-size: 16px
+            line-height: 24px
+            margin: 30px 0
+            color: #fff
+            font-family: "PT Sans"
+
     &feed
         position: relative
         width: 100%
-        margin: 113px 0
+        margin: 20px 0
         padding-bottom: 58px
         color: #fff
 
         +media(1024)
             width: 50%
-            margin: 113px 30px
+            margin: 20px 30px
 
         img
             position: absolute
             left: 50%
             bottom: 0
             transform: translate(-50%, 50%)
+
+        .small
+            text-align: center
 
 .preloader
     width: 100%
@@ -107,6 +117,7 @@
 
 .all
     color: white
+    line-height: 25px
     font-size: 16px
     margin: 0
     padding-bottom: 15px
@@ -188,7 +199,7 @@
     display: flex
     flex-direction: column
     row-gap: 30px
-    margin-bottom: 77px 
+    margin-bottom: 77px
 
     +media (768)
         column-gap: 30px
