--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -299,6 +299,7 @@
     h4
         font-size: 36px
         width: 270px
+        margin: 10px 0
         text-transform: uppercase
         color: #333333
         text-align: center
@@ -357,18 +358,18 @@
         width: 270px
 
 .graf
-    width: 238px
-    height: 238px
-    padding: 15px
+    width: 228px
+    height: 228px
+    padding: 20px
     //margin-right: 50px
     background-image: url('../img/house.png')
     background-size: cover
     background-position: center
 
 .food
-    width: 238px
-    height: 238px
-    padding: 15px
+    width: 228px
+    height: 228px
+    padding: 20px
     //margin-right: 50px
     background-image: url('../img/height.png')
     background-size: cover
@@ -407,12 +408,13 @@
 
     .img
         position: absolute
-        top: 120%
+        top: 130%
         left: 50%
-        transform: translateX(-50%)
+        transform: translate(-50%, -50%)
 
     .small
-        padding-bottom: 20px
+        font-size: 13px
+        padding: 20px 60px
 
     .smalll
         font-size: 13px
