--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -80,6 +80,7 @@
         p
             font-size: 16px
             line-height: 24px
+            max-width: 450px
             margin: 30px 0
             color: #fff
             font-family: "PT Sans"
@@ -88,12 +89,13 @@
         position: relative
         width: 100%
         margin: 20px 0
-        padding-bottom: 58px
+        height: min-content
+        padding-bottom: 35px
         color: #fff
 
         +media(1024)
             width: 50%
-            margin: 20px 30px
+            margin: 20px 0 20px 20px
 
         img
             position: absolute
@@ -179,10 +181,11 @@
 .tx
     padding: 0 30px
     margin-top: 30px
+    margin-bottom: 20px
 
     +media (768)
-        padding: 0 60px
-        margin-top: 68px
+        padding: 0 35px
+        margin-top: 35px
 
 .prise
     font-size: 16px
