--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -94,7 +94,7 @@ html(lang="en")
                         .informquestion 
                             .border 
                             .question 
-                                p задати питання
+                                p.wideTx задати питання
                                 p.small Скажіть доброго дня нашому консультанту, і ми з радістю відповімо на Ваші запитання  
                                 img(alt="телефон", src="img/icons/phone.png")
                                 a(href="tel:+380505698511") +38 (050) 56 98 511
