--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -217,7 +217,7 @@
     position: relative
     width: 270px
     //height: 332px
-    padding-bottom: 35px
+    padding-bottom: 55px
     transition: all 1s ease
 
     p
@@ -289,6 +289,7 @@
     display: flex
     flex-direction: column
     justify-content: center
+    letter-spacing: 1px
     align-content: center
     flex-wrap: wrap
     margin-top: 77px
@@ -323,6 +324,8 @@
         p
             font-size: 13px
             color: #ffffff
+            line-height: 19px
+            margin: 20px 0
 
         a
             font-size: 18px
@@ -347,10 +350,10 @@
             text-transform: uppercase
             color: #ffb700
             text-align: center
-            border: 1px solid #ffb700
+            border: 2px solid #ffb700
             border-radius: 15px
             transition: all 1s ease
-            padding: 0 10px
+            padding: 0 15px
 
             &:hover
                 background-color: #ffb700
@@ -424,3 +427,7 @@
         padding: 0
         color: #999999
         text-align: center
+
+
+.wideTx
+    letter-spacing: 1px    
