--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -208,6 +208,7 @@ h1
 .buttop h2
     font-size: 36px
     font-weight: 400
+    letter-spacing: 1px
     max-width: 320px
     text-transform: uppercase
 
@@ -243,6 +244,7 @@ h1
     font-size: 24px
     color: #0099ff
     margin-top: 0
+    font-size: 400
     margin-bottom: 5px
 
 .card p,
@@ -257,7 +259,7 @@ h1
 .pricard img
     width: 55px
     height: 50px
-    margin-top: 15px
+    margin-top: 10px
     text-align: center
 
 .card
