--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -289,7 +289,6 @@
     display: flex
     flex-direction: column
     justify-content: center
-    letter-spacing: 1px
     align-content: center
     flex-wrap: wrap
     margin-top: 77px
@@ -302,6 +301,7 @@
 
     h4
         font-size: 36px
+        letter-spacing: 1px
         width: 270px
         margin: 10px 0
         text-transform: uppercase
@@ -386,7 +386,7 @@
     content: ''
     position: absolute
     width: 50px
-    height: 269px
+    height: 260px
     border: 4px solid #ffb700
 
 .border::before
@@ -399,11 +399,14 @@
 .question
     position: relative
     text-align: center
-    bottom: 18px
+    bottom: 20px
 
     p
         margin: 0
+        text-align: center      
         padding: 10px
+        font-size: 18px
+        font-weight: 400
 
     a
         font-size: 18px
@@ -414,7 +417,7 @@
 
     .img
         position: absolute
-        top: 130%
+        top: 125%
         left: 50%
         transform: translate(-50%, -50%)
 
@@ -426,8 +429,8 @@
         font-size: 13px
         padding: 0
         color: #999999
+        font-family: "PT Sans"
         text-align: center
 
-
 .wideTx
-    letter-spacing: 1px    
+    letter-spacing: 1px
