--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -73,7 +73,6 @@ ul, li
 h1
     color: blue
 
-
 .midtop
     position: relative
 
@@ -268,7 +267,8 @@ h1
 .plans
     color: #0099ff
     font-size: 12px
-    text-align: right
+    padding-left: 141px
+    text-align: center
     text-transform: uppercase
 
 .pricard
