--- a/src/sass/component/header.sass
+++ b/src/sass/component/header.sass
@@ -7,7 +7,7 @@
     display: flex
     justify-content: space-between
     align-items: center
-    padding-top: 10px
+    padding-top: 15px
 
 .menu
     display: none
@@ -26,11 +26,16 @@
 .menu li
     display: inline-block
     padding: 15px
+    box-sizing: border-box
+    &:last-child
+        padding-right: 0
 
 .menu a
     color: white
     font-size: 14rem
     font-family: Rubik
+    letter-spacing: 0.3px
+    font-weight: 400
     transition: 1s all ease
 
     &:hover
