--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -2,11 +2,19 @@
 .tai
     display: flex
     flex-direction: column
-    padding-bottom: 77px
-    padding-top: 77px
+    padding-bottom: 73px
+    padding-top: 64px
 
     +media (1024)
         flex-direction: row
+
+    .big
+        // margin-left: 3px
+
+        margin-top: 3px
+        line-height: 24px
+        +media(768)
+            width: 460px
 
     &content
         display: flex
@@ -26,12 +34,17 @@
                 text-align: left
 
     &container
-
         +media (768)
             width: calc(100% - 317px)
 
+        p
+            margin: 0
+            padding-top: 5px
+            padding-bottom: 30px
+        .butt
+            margin-right: 15px
 .taiimg
-    padding: 10px 25px 0 0
+    padding: 10px 30px 0 0
 
     img
         width: 100%
@@ -41,11 +54,14 @@
         +media(480)
             width: 270px
 
-        +media(1024)
+        +media(1024)        
             width: 370px
 
+
+/*------------------------------------WAVE----------------------------------------*/
+
 .wave
-    padding: 100px 0
+    padding: 90px 0 100px
     background-image: url('../img/wave.png')
     background-size: cover
     background-position: center
@@ -78,7 +94,7 @@
                 text-align: left
 
         p
-            margin: 30px 0
+            margin: 10px 0 30px
             max-width: 450px
             color: #fff
             font-size: 16px
@@ -94,7 +110,7 @@
         color: #fff
 
         +media(1024)
-            margin: 20px 0 20px 20px
+            margin: 25px 0 20px 20px
             width: 50%
 
         img
@@ -166,7 +182,8 @@
     top: 0
     left: 50%
     margin: 0
-    margin-left: 60px
+    // margin-left: 60px
+    
     color: #ffb700
     font-size: 78px
     text-align: center
@@ -184,18 +201,19 @@
     padding: 0 30px
 
     +media (768)
-        margin-top: 35px
+        margin-top: 30px
         padding: 0 35px
-
+/*------------------------------------PROPOSITIOM FOR WEEKEND------------------------------------*/
 .prise
-    margin-bottom: 50px
+    margin-top: 7px
+    margin-bottom: 38px
     color: #333
     font-size: 16px
     font-style: italic
     text-align: center
 
 .price
-    margin-top: 77px
+    margin-top: 72px
     margin-bottom: 50px
 
 .pricecards
@@ -225,10 +243,13 @@
         padding: 0 20px
         color: #999999
         font-size: 13px
+        line-height: 19px
 
     h4
-        margin: 15px 0
+        margin: 15px 0 10px
+        line-height: 19px
         padding: 0 20px
+        font-size: 18px
 
     h5
         margin: 0
@@ -252,14 +273,14 @@
 
     img
         width: 100%
-        height: 185px
+        height: 190px
 
 .blueline
     position: absolute
     top: 0
     left: 0
     width: 60px
-    height: 185px
+    height: 190px
     background-color: #0099ff
 
     img
@@ -269,7 +290,7 @@
 
 .test
     position: absolute
-    bottom: 0
+    bottom: 20px
     align-items: center
     justify-content: space-between
     display: flex
@@ -284,7 +305,7 @@
     text-transform: uppercase
     text-align: center
     text-align: center
-
+/*----------------------------------ADD INFORM-----------------------------------------------*/
 .inform
     flex-direction: column
     justify-content: center
