--- a/src/sass/component/main.sass
+++ b/src/sass/component/main.sass
@@ -117,7 +117,7 @@
             position: absolute
             left: 50%
             bottom: 0
-            transform: translate(-50%, 50%)
+            transform: translate(-50% 50%)
 
         .small
             text-align: center
