--- a/src/sass/styles.sass
+++ b/src/sass/styles.sass
@@ -265,11 +265,16 @@ h1
     line-height: 21.5px
 
 .plans
+    display: block
     color: #0099ff
     font-size: 12px
-    padding-left: 141px
+    width: 100%
     text-align: center
+    box-sizing: border-box
     text-transform: uppercase
+
+    +media(1453)
+        padding-left: 288px
 
 .pricard
     margin: 0
@@ -297,3 +302,59 @@ h1
 
 .small
     margin: 0
+
+.contactForm
+    position: fixed
+    display: none
+    left: 0
+    top: 0
+    width: 100%
+    height: 100vh
+    justify-content: center
+    align-items: center
+    backdrop-filter: blur(5px)
+
+    form
+        display: flex
+        flex-direction: column
+        background-color: #fff
+        box-shadow: 0px 0px 30px black
+        border: 10px solid white
+        text-align: center
+        border-radius: 15px
+
+    h2
+        text-transform: uppercase
+        color: #333    
+
+    label
+        position: relative
+
+    input
+        margin: 15px 0
+        padding: 5px
+        width: 100%
+        box-sizing: border-box
+
+    input:valid + span
+        left: 0
+        top: -5px
+        font-size: 10px
+        opacity: 1
+
+    .mButt
+        display: flex
+        margin-top: 10px 
+
+        a
+            margin: 5px
+
+    span
+        position: absolute
+        top: 10px
+        left: 10px
+        opacity: 0
+        transition: 1s all ease
+
+.showForm
+    display: flex
