--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -24,7 +24,7 @@ html(lang="en")
                     h1 Морські пригоди
                     p Не важливо, чи Ваша мандрівка належить до елітного рівня чи до економваріанту, туроператор S trips потурбується, щоб Ви залишились задоволеними!
                     .transp
-                    a(href="#").butt детальніше
+                    a(href="#").butt#details детальніше
                 a(href="#special").buttop
                     h2 обери свій план подорожі
                     p Наша фірма - лідер на ринку у своїй сфері
